hphp/test/slow/exceptions/ctor_invalid_message_object.php.expectf

Fatal error: Wrong parameters for Exception([string $exception [, long $code [, Exception $previous = NULL]]]) in %s/ctor_invalid_message_object.php on line 3
